--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-link-context": "^1.0.18",
     "apollo-server": "^2.6.3",
     "bcryptjs": "^2.4.3",
     "graphql": "^14.3.1",
